tests/traci/set_variable/TrafficLight/errors/testsuite.traci
# Tests what happens if one asks for an unsupported variable
UnsupportedVariable

# Tests what happens if one asks for an unknown traffic light
UnknownTL
invalid_phase_index
